Revert "[GEOS-10809] Keycloak : add support for usernames with spaces : avoid try catch"
This reverts commit 16a9db993608793bf1504d884150fe6d02b123b1.