@@ -5,8 +5,9 @@
 
 package org.geoserver.security.keycloak;
 
+import java.io.UncheckedIOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 
 /** A builder for a keycloak rest endpoint. */
 class KeycloakUrlBuilder {
@@ -46,8 +47,11 @@ class KeycloakUrlBuilder {
      */
     KeycloakUrlBuilder userByName(String userName) {
         users();
-        sb.append("?exact=true&username=")
-                .append(URLEncoder.encode(userName, StandardCharsets.UTF_8));
+        try {
+            sb.append("?exact=true&username=").append(URLEncoder.encode(userName, "UTF-8"));
+        } catch (UnsupportedEncodingException e) {
+            throw new UncheckedIOException(e);
+        }
         return this;
     }
 
